--- a/doc/dl/01.md
+++ b/doc/dl/01.md
@@ -377,6 +377,6 @@ bias    :-0.2
 
 1. Tom M. Mitchell, "机器学习", 曾华军等译, 机械工业出版社
 
-[00-01-01]: ../.gitbook/assets/00/01-01.png
-[00-01-02]: ../.gitbook/assets/00/01-02.png
-[00-01-03]: ../.gitbook/assets/00/01-03.png
+[00-01-01]: ../../.gitbook/assets/00/01-01.png
+[00-01-02]: ../../.gitbook/assets/00/01-02.png
+[00-01-03]: ../../.gitbook/assets/00/01-03.png
