--- a/doc/dl/02.md
+++ b/doc/dl/02.md
@@ -18,11 +18,11 @@ $$
 
 这样的线性单元如下图所示
 
-![02-01](../.gitbook/assets/00/02-01.png)
+![00-02-01][]
 
 对比此前我们讲过的感知器
 
-![01-02](../.gitbook/assets/00/01-02.png)
+![00-01-02][]
 
 这样替换了激活函数之后，**线性单元**将返回一个**实数值**而不是**0,1 分类**。因此线性单元用来解决**回归**问题而不是**分类**问题。
 
@@ -145,7 +145,7 @@ $$
 
 不过对于计算机来说，它可不会解方程。但是它可以凭借强大的计算能力，一步一步的去把函数的极值点『试』出来。如下图所示：
 
-![02-02](../.gitbook/assets/00/02-02.png)
+![00-02-02][]
 
 首先，我们随便选择一个点开始，比如上图的$$x_0$$点。接下来，每次迭代修改$$x$$的为$$x_1,x_2,x_3,...$$，经过数次迭代后最终达到函数最小值点。
 
@@ -303,7 +303,7 @@ $$
 
 如果我们根据(式 3)来训练模型，那么我们每次更新$$\mathrm{w}$$的迭代，要遍历训练数据中所有的样本进行计算，我们称这种算法叫做**批梯度下降(Batch Gradient Descent)**。如果我们的样本非常大，比如数百万到数亿，那么计算量异常巨大。因此，实用的算法是 SGD 算法。在 SGD 算法中，每次更新$$\mathrm{w}$$的迭代，只计算一个样本。这样对于一个具有数百万样本的训练数据，完成一次遍历就会对$$\mathrm{w}$$更新数百万次，效率大大提升。由于样本的噪音和随机性，每次更新$$\mathrm{w}$$并不一定按照减少$$E$$的方向。然而，虽然存在一定随机性，大量的更新总体上沿着减少$$E$$的方向前进的，因此最后也能收敛到最小值附近。下图展示了 SGD 和 BGD 的区别
 
-![02-03](../.gitbook/assets/00/02-03.png)
+![00-02-03][]
 
 如上图，椭圆表示的是函数值的等高线，椭圆中心是函数的最小值点。红色是 BGD 的逼近曲线，而紫色是 SGD 的逼近曲线。我们可以看到 BGD 是一直向着最低点前进的，而 SGD 明显躁动了许多，但总体上仍然是向最低点逼近的。
 
@@ -376,7 +376,7 @@ if __name__ == '__main__':
 
 拟合的直线如下图
 
-![02-04](../.gitbook/assets/00/02-04.png)
+![00-02-04][]
 
 ## 小结
 
@@ -396,3 +396,8 @@ if __name__ == '__main__':
 ## 参考资料
 
 1. Tom M. Mitchell, "机器学习", 曾华军等译, 机械工业出版社
+
+[00-02-01]: ../../.gitbook/assets/00/02-01.png
+[00-02-02]: ../../.gitbook/assets/00/02-02.png
+[00-02-03]: ../../.gitbook/assets/00/02-03.png
+[00-02-04]: ../../.gitbook/assets/00/02-04.png
