--- a/doc/dl/03.md
+++ b/doc/dl/03.md
@@ -1173,9 +1173,9 @@ class Network(object):
 2. CS 224N / Ling 284, Neural Networks for Named Entity Recognition
 3. LeCun et al. Gradient-Based Learning Applied to Document Recognition 1998
 
-[00-03-01]: ../.gitbook/assets/00/03-01.gif
-[00-03-02]: ../.gitbook/assets/00/03-02.jpeg
-[00-03-03]: ../.gitbook/assets/00/03-03.jpeg
-[00-03-04]: ../.gitbook/assets/00/03-04.png
-[00-03-05]: ../.gitbook/assets/00/03-05.png
-[00-03-06]: ../.gitbook/assets/00/03-06.png
+[00-03-01]: ../../.gitbook/assets/00/03-01.gif
+[00-03-02]: ../../.gitbook/assets/00/03-02.jpeg
+[00-03-03]: ../../.gitbook/assets/00/03-03.jpeg
+[00-03-04]: ../../.gitbook/assets/00/03-04.png
+[00-03-05]: ../../.gitbook/assets/00/03-05.png
+[00-03-06]: ../../.gitbook/assets/00/03-06.png
