--- a/doc/dl/04.md
+++ b/doc/dl/04.md
@@ -1,5 +1,7 @@
 # 卷积神经网络
 
+原文地址：<https://www.zybuluo.com/hanbingtao/note/485480>
+
 ## 往期回顾
 
 在前面的文章中，我们介绍了全连接神经网络，以及它的训练和使用。我们用它来识别了手写数字，然而，这种结构的网络对于图像识别任务来说并不是很合适。本文将要介绍一种更适合图像、语音识别任务的神经网络结构——**卷积神经网络**(Convolutional Neural Network, CNN)。说卷积神经网络是最重要的一种神经网络也不为过，它在最近几年大放异彩，几乎所有图像、语音识别领域的重要突破都是卷积神经网络取得的，比如谷歌的 GoogleNet、微软的 ResNet 等，打败李世石的 AlphaGo 也用到了这种网络。本文将详细介绍**卷积神经网络**以及它的训练算法，以及动手实现一个简单的**卷积神经网络**。
@@ -1059,28 +1061,28 @@ class MaxPoolingLayer(object):
 3. Jake Bouvrie, Notes on Convolutional Neural Networks, 2006
 4. [Ian Goodfellow, Yoshua Bengio, Aaron Courville, Deep Learning, MIT Press, 2016](http://www.deeplearningbook.org/)
 
-[00-04-01]: ../.gitbook/assets/00/04-01.png
-[00-04-02]: ../.gitbook/assets/00/04-02.png
-[00-04-03]: ../.gitbook/assets/00/04-03.png
-[00-04-04]: ../.gitbook/assets/00/04-04.png
-[00-04-05]: ../.gitbook/assets/00/04-05.png
-[00-04-06]: ../.gitbook/assets/00/04-06.png
-[00-04-07]: ../.gitbook/assets/00/04-07.gif
-[00-04-08]: ../.gitbook/assets/00/04-08.png
-[00-04-09]: ../.gitbook/assets/00/04-09.png
-[00-04-10]: ../.gitbook/assets/00/04-10.png
-[00-04-11]: ../.gitbook/assets/00/04-11.png
-[00-04-12]: ../.gitbook/assets/00/04-12.gif
-[00-04-13]: ../.gitbook/assets/00/04-13.png
-[00-04-14]: ../.gitbook/assets/00/04-14.png
-[00-04-15]: ../.gitbook/assets/00/04-15.png
-[00-04-16]: ../.gitbook/assets/00/04-16.png
-[00-04-17]: ../.gitbook/assets/00/04-17.png
-[00-04-18]: ../.gitbook/assets/00/04-18.png
-[00-04-19]: ../.gitbook/assets/00/04-19.png
-[00-04-20]: ../.gitbook/assets/00/04-20.png
-[00-04-21]: ../.gitbook/assets/00/04-21.png
-[00-04-22]: ../.gitbook/assets/00/04-22.png
-[00-04-23]: ../.gitbook/assets/00/04-23.png
-[00-04-24]: ../.gitbook/assets/00/04-24.png
-[00-04-25]: ../.gitbook/assets/00/04-25.png
+[00-04-01]: ../../.gitbook/assets/00/04-01.png
+[00-04-02]: ../../.gitbook/assets/00/04-02.png
+[00-04-03]: ../../.gitbook/assets/00/04-03.png
+[00-04-04]: ../../.gitbook/assets/00/04-04.png
+[00-04-05]: ../../.gitbook/assets/00/04-05.png
+[00-04-06]: ../../.gitbook/assets/00/04-06.png
+[00-04-07]: ../../.gitbook/assets/00/04-07.gif
+[00-04-08]: ../../.gitbook/assets/00/04-08.png
+[00-04-09]: ../../.gitbook/assets/00/04-09.png
+[00-04-10]: ../../.gitbook/assets/00/04-10.png
+[00-04-11]: ../../.gitbook/assets/00/04-11.png
+[00-04-12]: ../../.gitbook/assets/00/04-12.gif
+[00-04-13]: ../../.gitbook/assets/00/04-13.png
+[00-04-14]: ../../.gitbook/assets/00/04-14.png
+[00-04-15]: ../../.gitbook/assets/00/04-15.png
+[00-04-16]: ../../.gitbook/assets/00/04-16.png
+[00-04-17]: ../../.gitbook/assets/00/04-17.png
+[00-04-18]: ../../.gitbook/assets/00/04-18.png
+[00-04-19]: ../../.gitbook/assets/00/04-19.png
+[00-04-20]: ../../.gitbook/assets/00/04-20.png
+[00-04-21]: ../../.gitbook/assets/00/04-21.png
+[00-04-22]: ../../.gitbook/assets/00/04-22.png
+[00-04-23]: ../../.gitbook/assets/00/04-23.png
+[00-04-24]: ../../.gitbook/assets/00/04-24.png
+[00-04-25]: ../../.gitbook/assets/00/04-25.png
