--- a/doc/dl/05.md
+++ b/doc/dl/05.md
@@ -1,5 +1,7 @@
 # 循环神经网络
 
+原文地址: <https://www.zybuluo.com/hanbingtao/note/541458>
+
 ## 往期回顾
 
 在前面的文章系列文章中，我们介绍了全连接神经网络和卷积神经网络，以及它们的训练和使用。他们都只能单独的取处理一个个的输入，前一个输入和后一个输入是完全没有关系的。但是，某些任务需要能够更好的处理**序列**的信息，即前面的输入和后面的输入是有关系的。比如，当我们在理解一句话意思时，孤立的理解这句话的每个词是不够的，我们需要处理这些词连接起来的整个**序列**；当我们处理视频的时候，我们也不能只单独的去分析每一帧，而要分析这些帧连接起来的整个**序列**。这时，就需要用到深度学习领域中另一类非常重要神经网络：**循环神经网络(Recurrent Neural Network)**。RNN 种类很多，也比较绕脑子。不过读者不用担心，本文将一如既往的对复杂的东西剥茧抽丝，帮助您理解 RNNs 以及它的训练算法，并动手实现一个**循环神经网络**。
@@ -941,14 +943,14 @@ def gradient_check():
 6. [Recurrent neural network based language model, Mikolov et al.](http://www.fit.vutbr.cz/research/groups/speech/publi/2010/mikolov_interspeech2010_IS100722.pdf)
 7. [Neural Network Classification, Categorical Data, Softmax Activation, and Cross Entropy Error, McCaffrey](https://jamesmccaffrey.wordpress.com/2011/12/17/neural-network-classification-categorical-data-softmax-activation-and-cross-entropy-error/)
 
-[00-05-01]: ../.gitbook/assets/00/05-01.jpeg
-[00-05-02]: ../.gitbook/assets/00/05-02.jpeg
-[00-05-03]: ../.gitbook/assets/00/05-03.png
-[00-05-04]: ../.gitbook/assets/00/05-04.png
-[00-05-05]: ../.gitbook/assets/00/05-05.png
-[00-05-06]: ../.gitbook/assets/00/05-06.png
-[00-05-07]: ../.gitbook/assets/00/05-07.png
-[00-05-08]: ../.gitbook/assets/00/05-08.png
-[00-05-09]: ../.gitbook/assets/00/05-09.png
-[00-05-10]: ../.gitbook/assets/00/05-10.png
-[00-05-11]: ../.gitbook/assets/00/05-11.png
+[00-05-01]: ../../.gitbook/assets/00/05-01.jpeg
+[00-05-02]: ../../.gitbook/assets/00/05-02.jpeg
+[00-05-03]: ../../.gitbook/assets/00/05-03.png
+[00-05-04]: ../../.gitbook/assets/00/05-04.png
+[00-05-05]: ../../.gitbook/assets/00/05-05.png
+[00-05-06]: ../../.gitbook/assets/00/05-06.png
+[00-05-07]: ../../.gitbook/assets/00/05-07.png
+[00-05-08]: ../../.gitbook/assets/00/05-08.png
+[00-05-09]: ../../.gitbook/assets/00/05-09.png
+[00-05-10]: ../../.gitbook/assets/00/05-10.png
+[00-05-11]: ../../.gitbook/assets/00/05-11.png
