--- a/doc/dl/07.md
+++ b/doc/dl/07.md
@@ -1,5 +1,7 @@
 # 递归神经网络
 
+原文地址: <https://www.zybuluo.com/hanbingtao/note/626300>
+
 ## 往期回顾
 
 在前面的文章中，我们介绍了**循环神经网络**，它可以用来处理包含序列结构的信息。然而，除此之外，信息往往还存在着诸如树结构、图结构等更复杂的结构。对于这种复杂的结构，**循环神经网络**就无能为力了。本文介绍一种更为强大、复杂的神经网络：**递归神经网络 (Recursive Neural Network, RNN)**，以及它的训练算法**BPTS (Back Propagation Through Structure)**。顾名思义，**递归神经网络**（巧合的是，它的缩写和**循环神经网络**一样，也是 RNN）可以处理诸如树、图这样的**递归结构**。在文章的最后，我们将实现一个**递归神经网络**，并介绍它的几个应用场景。
@@ -8,23 +10,27 @@
 
 因为神经网络的输入层单元个数是固定的，因此必须用循环或者递归的方式来处理长度可变的输入。**循环神经网络**实现了前者，通过将长度不定的输入分割为等长度的小块，然后再依次的输入到网络中，从而实现了神经网络对变长输入的处理。一个典型的例子是，当我们处理一句话的时候，我们可以把一句话看作是词组成的序列，然后，每次向**循环神经网络**输入一个词，如此循环直至整句话输入完毕，**循环神经网络**将产生对应的输出。如此，我们就能处理任意长度的句子了。入下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-a87286a58fc03563.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-01][]
 
 然而，有时候把句子看做是词的序列是不够的，比如下面这句话『两个外语学院的学生』：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-1d69d9ea35f55af0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-02][]
 
 上图显示了这句话的两个不同的语法解析树。可以看出来这句话有歧义，不同的语法解析树则对应了不同的意思。一个是『两个外语学院的/学生』，也就是学生可能有许多，但他们来自于两所外语学校；另一个是『两个/外语学院的学生』，也就是只有两个学生，他们是外语学院的。为了能够让模型区分出两个不同的意思，我们的模型必须能够按照树结构去处理信息，而不是序列，这就是**递归神经网络**的作用。当面对按照树/图结构处理信息更有效的任务时，**递归神经网络**通常都会获得不错的结果。
 
 **递归神经网络**可以把一个树/图结构信息编码为一个向量，也就是把信息映射到一个语义向量空间中。这个语义向量空间满足某类性质，比如语义相似的向量距离更近。也就是说，如果两句话（尽管内容不同）它的意思是相似的，那么把它们分别编码后的两个向量的距离也相近；反之，如果两句话的意思截然不同，那么编码后向量的距离则很远。如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-712ec37a73b854c1.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+![00-07-03][]
+
+
 
 从上图我们可以看到，**递归神经网络**将所有的词、句都映射到一个 2 维向量空间中。句子『the country of my birth』和句子『the place where I was born』的意思是非常接近的，所以表示它们的两个向量在向量空间中的距离很近。另外两个词『Germany』和『France』因为表示的都是地点，它们的向量与上面两句话的向量的距离，就比另外两个表示时间的词『Monday』和『Tuesday』的向量的距离近得多。这样，通过向量的距离，就得到了一种语义的表示。
 
 上图还显示了自然语言**可组合**的性质：词可以组成句、句可以组成段落、段落可以组成篇章，而更高层的语义取决于底层的语义以及它们的组合方式。**递归神经网络**是一种表示学习，它可以将词、句、段、篇按照他们的语义映射到同一个向量空间中，也就是把可组合（树/图结构）的信息表示为一个个有意义的向量。比如上面这个例子，**递归神经网络**把句子"the country of my birth"表示为二维向量[1,5]。有了这个『编码器』之后，我们就可以以这些有意义的向量为基础去完成更高级的任务（比如情感分析等）。如下图所示，**递归神经网络**在做情感分析时，可以比较好的处理否定句，这是胜过其他一些模型的：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-1f91307ac606ba00.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-04][]
 
 在上图中，蓝色表示正面评价，红色表示负面评价。每个节点是一个向量，这个向量表达了以它为根的子树的情感评价。比如"intelligent humor"是正面评价，而"care about cleverness wit or any other kind of intelligent humor"是中性评价。我们可以看到，模型能够正确的处理 doesn't 的含义，将正面评价转变为负面评价。
 
@@ -38,7 +44,7 @@
 
 **递归神经网络**的输入是两个子节点（也可以是多个），输出就是将这两个子节点编码后产生的父节点，父节点的维度和每个子节点是相同的。如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-f2ea8885320110a5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-05][]
 
 $$\mathbf{c}_1$$和$$\mathbf{c}_2$$分别是表示两个子节点的向量，$$\mathbf{p}$$是表示父节点的向量。子节点和父节点组成一个全连接神经网络，也就是子节点的每个神经元都和父节点的每个神经元两两相连。我们用矩阵$$W$$表示这些连接上的权重，它的维度将是$$d\times 2d$$，其中，$$d$$表示每个节点的维度。父节点的计算公式可以写成：
 
@@ -50,11 +56,11 @@ $$
 
 然后，我们把产生的父节点的向量和其他子节点的向量再次作为网络的输入，再次产生它们的父节点。如此递归下去，直至整棵树处理完毕。最终，我们将得到根节点的向量，我们可以认为它是对整棵树的表示，这样我们就实现了把树映射为一个向量。在下图中，我们使用**递归神经网络**处理一棵树，最终得到的向量$$\mathbf{p}_3$$，就是对整棵树的表示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-2e300754026038f5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-06][]
 
 举个例子，我们使用**递归神将网络**将『两个外语学校的学生』映射为一个向量，如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-577b3ccc7c34eb34.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-07][]
 
 最后得到的向量$$\mathbf{p}_3$$就是对整个句子『两个外语学校的学生』的表示。由于整个结构是递归的，不仅仅是根节点，事实上每个节点都是以其为根的子树的表示。比如，在左边的这棵树中，向量$$\mathbf{p}_2$$是短语『外语学院的学生』的表示，而向量$$\mathbf{p}_1$$是短语『外语学院的』的表示。
 
@@ -72,7 +78,7 @@ $$
 
 首先，我们先推导将误差从父节点传递到子节点的公式，如下图：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-9ab001431eb2f2a4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-08][]
 
 定义为$$\delta_p$$误差函数 E 相对于父节点$$p$$的加权输入$$\mathbf{net}_p$$的导数，即：
 
@@ -145,7 +151,7 @@ $$
 
 上式看上去可能会让人晕菜，从下图，我们可以直观的看到$$U_j$$到底是啥。首先我们把 W 矩阵拆分为两个矩阵$$W_1$$和$$W_2$$，如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-fb58d74fbc7e9ce5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-09][]
 
 显然，子矩阵$$W_1$$和$$W_2$$分别对应子节点$$c_1$$和$$c_2$$的到父节点$$\mathbf{p}$$权重。则矩阵$$U_j$$为：
 
@@ -183,7 +189,7 @@ $$
 
 有了传递一层的公式，我们就不难写出逐层传递的公式。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-02c71c9fade90557.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-10][]
 
 上图是在树型结构中反向传递误差项的全景图，反复应用**式 2**，在已知$$\delta_p^{(3)}$$的情况下，我们不难算出$$\delta_p^{(1)}$$为：
 
@@ -504,7 +510,7 @@ def gradient_check():
 
 下面是梯度检查的结果，完全正确，OH YEAH！
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-bea78770357e735a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-11][]
 
 ## 递归神经网络的应用
 
@@ -512,35 +518,35 @@ def gradient_check():
 
 在自然语言处理任务中，如果我们能够实现一个解析器，将自然语言解析为语法树，那么毫无疑问，这将大大提升我们对自然语言的处理能力。解析器如下所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-6b7f075645c12c92.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-12][]
 
 可以看出，**递归神经网络**能够完成句子的语法分析，并产生一个语法解析树。
 
 除了自然语言之外，自然场景也具有**可组合**的性质。因此，我们可以用类似的模型完成自然场景的解析，如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-7ed5b7d06a8cc583.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![00-07-13][]
 
 两种不同的场景，可以用相同的**递归神经网络**模型来实现。我们以第一个场景，自然语言解析为例。
 
 我们希望将一句话逐字输入到神经网络中，然后，神经网络返回一个解析好的树。为了做到这一点，我们需要给神经网络再加上一层，负责打分。分数越高，说明两个子节点结合更加紧密，分数越低，说明两个子节点结合更松散。如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-2f0393edbc04c30e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/480)
+![00-07-14][]
 
 一旦这个打分函数训练好了（也就是矩阵 U 的各项值变为合适的值），我们就可以利用贪心算法来实现句子的解析。第一步，我们先将词按照顺序两两输入神经网络，得到第一组打分：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-be0eb2d1a3527bc6.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/480)
+![00-07-15][]
 
 我们发现，现在分数最高的是第一组，The cat，说明它们的结合是最紧密的。这样，我们可以先将它们组合为一个节点。然后，再次两两计算相邻子节点的打分：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-bb8f87bc4f56f5ee.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/480)
+![00-07-16][]
 
 现在，分数最高的是最后一组，the mat。于是，我们将它们组合为一个节点，再两两计算相邻节点的打分：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-9c3332923237d11c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/480)
+![00-07-17][]
 
 这时，我们发现最高的分数是 on the mat，把它们组合为一个节点，继续两两计算相邻节点的打分......最终，我们就能够得到整个解析树：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-14f0140e4eafa5ca.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/480)
+![00-07-18][]
 
 现在，我们困惑这样牛逼的打分函数 score 是怎样训练出来的呢？我们需要定义一个目标函数。这里，我们使用 Max-Margin 目标函数。它的定义如下：
 
@@ -579,3 +585,22 @@ $$
 1. [CS224d: Deep Learning for Natural Language Processing](http://cs224d.stanford.edu/)
 2. [Learning Task-Dependent Distributed Representations by Back Propagation Through Structure](https://pdfs.semanticscholar.org/794e/6ed81d21f1bf32a0fd3be05c44c1fa362688.pdf)
 3. [Parsing Natural Scenes and Natural Language with Recursive Neural Networks](http://ai.stanford.edu/~ang/papers/icml11-ParsingWithRecursiveNeuralNetworks.pdf)
+
+[00-07-01]: ../../.gitbook/assets/00/07-01.png
+[00-07-02]: ../../.gitbook/assets/00/07-02.png
+[00-07-03]: ../../.gitbook/assets/00/07-03.png
+[00-07-04]: ../../.gitbook/assets/00/07-04.png
+[00-07-05]: ../../.gitbook/assets/00/07-05.png
+[00-07-06]: ../../.gitbook/assets/00/07-06.png
+[00-07-07]: ../../.gitbook/assets/00/07-07.png
+[00-07-08]: ../../.gitbook/assets/00/07-08.png
+[00-07-09]: ../../.gitbook/assets/00/07-09.png
+[00-07-10]: ../../.gitbook/assets/00/07-10.png
+[00-07-11]: ../../.gitbook/assets/00/07-11.png
+[00-07-12]: ../../.gitbook/assets/00/07-12.png
+[00-07-13]: ../../.gitbook/assets/00/07-13.png
+[00-07-14]: ../../.gitbook/assets/00/07-14.png
+[00-07-15]: ../../.gitbook/assets/00/07-15.png
+[00-07-16]: ../../.gitbook/assets/00/07-16.png
+[00-07-17]: ../../.gitbook/assets/00/07-17.png
+[00-07-18]: ../../.gitbook/assets/00/07-18.png
