--- a/doc/dl/02.md
+++ b/doc/dl/02.md
@@ -311,7 +311,10 @@ $$
 
 ## 实现线性单元
 
-> 完整代码请参考 GitHub: <https://github.com/hanbt/learn_dl/blob/master/linear_unit.py> (python2.7)
+> 原文 python 版本为 2.7， 这里修改成 3.9
+> 原文完整代码: <https://github.com/hanbt/learn_dl/blob/master/linear_unit.py> (python2.7)
+>
+> 修改 3.9 后完整代码: <https://github.com/gsxhnd/ai-learn-note/blob/master/code/ch-03/linear_unit.py>
 
 接下来，让我们撸一把代码。
 
@@ -338,41 +341,166 @@ class LinearUnit(Perceptron):
 
 接下来，我们用简单的数据进行一下测试。
 
-```pytho
+```python
 def get_training_dataset():
     '''
     捏造5个人的收入数据
     '''
-     构建训练数据
-     输入向量列表，每一项是工作年限
+    # 构建训练数据
+    # 输入向量列表，每一项是工作年限
     input_vecs = [[5], [3], [8], [1.4], [10.1]]
-     期望的输出列表，月薪，注意要与输入一一对应
+    # 期望的输出列表，月薪，注意要与输入一一对应
     labels = [5500, 2300, 7600, 1800, 11400]
     return input_vecs, labels
+
+
 def train_linear_unit():
     '''
     使用数据训练线性单元
     '''
-     创建感知器，输入参数的特征数为1（工作年限）
+    # 创建感知器，输入参数的特征数为1（工作年限）
     lu = LinearUnit(1)
-     训练，迭代10轮, 学习速率为0.01
+    # 训练，迭代10轮, 学习速率为0.01
     input_vecs, labels = get_training_dataset()
     lu.train(input_vecs, labels, 10, 0.01)
-    #返回训练好的线性单元
+    # 返回训练好的线性单元
     return lu
+  
 if __name__ == '__main__':
-    '''训练线性单元'''
+    # 训练线性单元
     linear_unit = train_linear_unit()
-     打印训练获得的权重
+    # 打印训练获得的权重
     print linear_unit
-     测试
+    # 测试
     print 'Work 3.4 years, monthly salary = %.2f' % linear_unit.predict([3.4])
     print 'Work 15 years, monthly salary = %.2f' % linear_unit.predict([15])
     print 'Work 1.5 years, monthly salary = %.2f' % linear_unit.predict([1.5])
     print 'Work 6.3 years, monthly salary = %.2f' % linear_unit.predict([6.3])
 ```
 
-程序运行结果如下图
+程序运行结果如下
+
+```
+当前训练轮次: 0, 权重值: [0.0], 偏置项: 0.0, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 0.0, 实际标签: 5500, 速率: 0.01, 当前权重: [0.0], 当前偏值项: 0.0
+更新权重数据: [275.0] 更新bias: 55.0
+更新权重前, 输入向量: [3], 输出结果: 880.0, 实际标签: 2300, 速率: 0.01, 当前权重: [275.0], 当前偏值项: 55.0
+更新权重数据: [317.6] 更新bias: 69.2
+更新权重前, 输入向量: [8], 输出结果: 2610.0, 实际标签: 7600, 速率: 0.01, 当前权重: [317.6], 当前偏值项: 69.2
+更新权重数据: [716.8] 更新bias: 119.1
+更新权重前, 输入向量: [1.4], 输出结果: 1122.62, 实际标签: 1800, 速率: 0.01, 当前权重: [716.8], 当前偏值项: 119.1
+更新权重数据: [726.28332] 更新bias: 125.87379999999999
+更新权重前, 输入向量: [10.1], 输出结果: 7461.335332, 实际标签: 11400, 速率: 0.01, 当前权重: [726.28332], 当前偏值项: 125.87379999999999
+更新权重数据: [1124.0884514680001] 更新bias: 165.26044668
+当前训练轮次: 1, 权重值: [1124.0884514680001], 偏置项: 165.26044668, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5785.702704020001, 实际标签: 5500, 速率: 0.01, 当前权重: [1124.0884514680001], 当前偏值项: 165.26044668
+更新权重数据: [1109.8033162670001] 更新bias: 162.40341963979998
+更新权重前, 输入向量: [3], 输出结果: 3491.813368440801, 实际标签: 2300, 速率: 0.01, 当前权重: [1109.8033162670001], 当前偏值项: 162.40341963979998
+更新权重数据: [1074.0489152137761] 更新bias: 150.48528595539196
+更新权重前, 输入向量: [8], 输出结果: 8742.876607665601, 实际标签: 7600, 速率: 0.01, 当前权重: [1074.0489152137761], 当前偏值项: 150.48528595539196
+更新权重数据: [982.618786600528] 更新bias: 139.05651987873594
+更新权重前, 输入向量: [1.4], 输出结果: 1514.7228211194752, 实际标签: 1800, 速率: 0.01, 当前权重: [982.618786600528], 当前偏值项: 139.05651987873594
+更新权重数据: [986.6126671048553] 更新bias: 141.9092916675412
+更新权重前, 输入向量: [10.1], 输出结果: 10106.69722942658, 实际标签: 11400, 速率: 0.01, 当前权重: [986.6126671048553], 当前偏值项: 141.9092916675412
+更新权重数据: [1117.2362469327707] 更新bias: 154.8423193732754
+当前训练轮次: 2, 权重值: [1117.2362469327707], 偏置项: 154.8423193732754, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5741.023554037129, 实际标签: 5500, 速率: 0.01, 当前权重: [1117.2362469327707], 当前偏值项: 154.8423193732754
+更新权重数据: [1105.1850692309142] 更新bias: 152.4320838329041
+更新权重前, 输入向量: [3], 输出结果: 3467.9872915256465, 实际标签: 2300, 速率: 0.01, 当前权重: [1105.1850692309142], 当前偏值项: 152.4320838329041
+更新权重数据: [1070.145450485145] 更新bias: 140.75221091764766
+更新权重前, 输入向量: [8], 输出结果: 8701.915814798807, 实际标签: 7600, 速率: 0.01, 当前权重: [1070.145450485145], 当前偏值项: 140.75221091764766
+更新权重数据: [981.9921853012403] 更新bias: 129.7330527696596
+更新权重前, 输入向量: [1.4], 输出结果: 1504.522112191396, 实际标签: 1800, 速率: 0.01, 当前权重: [981.9921853012403], 当前偏值项: 129.7330527696596
+更新权重数据: [986.1288757305607] 更新bias: 132.68783164774564
+更新权重前, 输入向量: [10.1], 输出结果: 10092.589476526407, 实际标签: 11400, 速率: 0.01, 当前权重: [986.1288757305607], 当前偏值项: 132.68783164774564
+更新权重数据: [1118.1773386013936] 更新bias: 145.76193688248156
+当前训练轮次: 3, 权重值: [1118.1773386013936], 偏置项: 145.76193688248156, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5736.64862988945, 实际标签: 5500, 速率: 0.01, 当前权重: [1118.1773386013936], 当前偏值项: 145.76193688248156
+更新权重数据: [1106.344907106921] 更新bias: 143.39545058358706
+更新权重前, 输入向量: [3], 输出结果: 3462.4301719043506, 实际标签: 2300, 速率: 0.01, 当前权重: [1106.344907106921], 当前偏值项: 143.39545058358706
+更新权重数据: [1071.4720019497904] 更新bias: 131.77114886454356
+更新权重前, 输入向量: [8], 输出结果: 8703.547164462867, 实际标签: 7600, 速率: 0.01, 当前权重: [1071.4720019497904], 当前偏值项: 131.77114886454356
+更新权重数据: [983.188228792761] 更新bias: 120.73567721991489
+更新权重前, 输入向量: [1.4], 输出结果: 1497.1991975297801, 实际标签: 1800, 速率: 0.01, 当前权重: [983.188228792761], 当前偏值项: 120.73567721991489
+更新权重数据: [987.4274400273441] 更新bias: 123.7636852446171
+更新权重前, 输入向量: [10.1], 输出结果: 10096.780829520792, 实际标签: 11400, 速率: 0.01, 当前权重: [987.4274400273441], 当前偏值项: 123.7636852446171
+更新权重数据: [1119.0525762457441] 更新bias: 136.79587694940918
+当前训练轮次: 4, 权重值: [1119.0525762457441], 偏置项: 136.79587694940918, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5732.058758178129, 实际标签: 5500, 速率: 0.01, 当前权重: [1119.0525762457441], 当前偏值项: 136.79587694940918
+更新权重数据: [1107.4496383368378] 更新bias: 134.47528936762788
+更新权重前, 输入向量: [3], 输出结果: 3456.824204378141, 实际标签: 2300, 速率: 0.01, 当前权重: [1107.4496383368378], 当前偏值项: 134.47528936762788
+更新权重数据: [1072.7449122054936] 更新bias: 122.90704732384647
+更新权重前, 输入向量: [8], 输出结果: 8704.866344967795, 实际标签: 7600, 速率: 0.01, 当前权重: [1072.7449122054936], 当前偏值项: 122.90704732384647
+更新权重数据: [984.35560460807] 更新bias: 111.85838387416852
+更新权重前, 输入向量: [1.4], 输出结果: 1489.9562303254665, 实际标签: 1800, 速率: 0.01, 当前权重: [984.35560460807], 当前偏值项: 111.85838387416852
+更新权重数据: [988.6962173835135] 更新bias: 114.95882157091386
+更新权重前, 输入向量: [10.1], 输出结果: 10100.7906171444, 实际标签: 11400, 速率: 0.01, 当前权重: [988.6962173835135], 当前偏值项: 114.95882157091386
+更新权重数据: [1119.9163650519292] 更新bias: 127.95091539946986
+当前训练轮次: 5, 权重值: [1119.9163650519292], 偏置项: 127.95091539946986, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5727.532740659116, 实际标签: 5500, 速率: 0.01, 当前权重: [1119.9163650519292], 当前偏值项: 127.95091539946986
+更新权重数据: [1108.5397280189734] 更新bias: 125.6755879928787
+更新权重前, 输入向量: [3], 输出结果: 3451.2947720497987, 实际标签: 2300, 速率: 0.01, 当前权重: [1108.5397280189734], 当前偏值项: 125.6755879928787
+更新权重数据: [1074.0008848574794] 更新bias: 114.16264027238071
+更新权重前, 输入向量: [8], 输出结果: 8706.169719132216, 实际标签: 7600, 速率: 0.01, 当前权重: [1074.0008848574794], 当前偏值项: 114.16264027238071
+更新权重数据: [985.507307326902] 更新bias: 103.10094308105855
+更新权重前, 输入向量: [1.4], 输出结果: 1482.8111733387213, 实际标签: 1800, 速率: 0.01, 当前权重: [985.507307326902], 当前偏值项: 103.10094308105855
+更新权重数据: [989.94795090016] 更新bias: 106.27283134767133
+更新权重前, 输入向量: [10.1], 输出结果: 10104.747135439286, 实际标签: 11400, 速率: 0.01, 当前权重: [989.94795090016], 当前偏值项: 106.27283134767133
+更新权重数据: [1120.768490220792] 更新bias: 119.22535999327847
+当前训练轮次: 6, 权重值: [1120.768490220792], 偏置项: 119.22535999327847, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5723.0678110972385, 实际标签: 5500, 速率: 0.01, 当前权重: [1120.768490220792], 当前偏值项: 119.22535999327847
+更新权重数据: [1109.61509966593] 更新bias: 116.99468188230608
+更新权重前, 输入向量: [3], 输出结果: 3445.8399808800964, 实际标签: 2300, 速率: 0.01, 当前权重: [1109.61509966593], 当前偏值项: 116.99468188230608
+更新权重数据: [1075.2399002395273] 更新bias: 105.53628207350512
+更新权重前, 输入向量: [8], 输出结果: 8707.455483989723, 实际标签: 7600, 速率: 0.01, 当前权重: [1075.2399002395273], 当前偏值项: 105.53628207350512
+更新权重数据: [986.6434615203494] 更新bias: 94.46172723360789
+更新权重前, 输入向量: [1.4], 输出结果: 1475.762573362097, 实际标签: 1800, 速率: 0.01, 当前权重: [986.6434615203494], 当前偏值项: 94.46172723360789
+更新权重数据: [991.1827854932801] 更新bias: 97.70410149998692
+更新权重前, 输入向量: [10.1], 输出结果: 10108.650234982115, 实际标签: 11400, 速率: 0.01, 当前权重: [991.1827854932801], 当前偏值项: 97.70410149998692
+更新权重数据: [1121.6091117600865] 更新bias: 110.61759915016577
+当前训练轮次: 7, 权重值: [1121.6091117600865], 偏置项: 110.61759915016577, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5718.663157950598, 实际标签: 5500, 速率: 0.01, 当前权重: [1121.6091117600865], 当前偏值项: 110.61759915016577
+更新权重数据: [1110.6759538625565] 更新bias: 108.43096757065979
+更新权重前, 输入向量: [3], 输出结果: 3440.4588291583295, 实际标签: 2300, 速率: 0.01, 当前权重: [1110.6759538625565], 当前偏值项: 108.43096757065979
+更新权重数据: [1076.4621889878067] 更新bias: 97.0263792790765
+更新权重前, 输入向量: [8], 输出结果: 8708.72389118153, 实际标签: 7600, 速率: 0.01, 当前权重: [1076.4621889878067], 当前偏值项: 97.0263792790765
+更新权重数据: [987.7642776932844] 更新bias: 85.9391403672612
+更新权重前, 输入向量: [1.4], 输出结果: 1468.8091291378591, 实际标签: 1800, 速率: 0.01, 当前权重: [987.7642776932844], 当前偏值项: 85.9391403672612
+更新权重数据: [992.4009498853544] 更新bias: 89.2510490758826
+更新权重前, 输入向量: [10.1], 输出结果: 10112.500642917963, 实际标签: 11400, 速率: 0.01, 当前权重: [992.4009498853544], 当前偏值项: 89.2510490758826
+更新权重数据: [1122.43838495064] 更新bias: 102.12604264670297
+当前训练轮次: 8, 权重值: [1122.43838495064], 偏置项: 102.12604264670297, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5714.317967399904, 实际标签: 5500, 速率: 0.01, 当前权重: [1122.43838495064], 当前偏值项: 102.12604264670297
+更新权重数据: [1111.722486580645] 更新bias: 99.98286297270393
+更新权重前, 输入向量: [3], 输出结果: 3435.150322714639, 实际标签: 2300, 速率: 0.01, 当前权重: [1111.722486580645], 当前偏值项: 99.98286297270393
+更新权重数据: [1077.6679768992058] 更新bias: 88.63135974555753
+更新权重前, 输入向量: [8], 输出结果: 8709.975174939203, 实际标签: 7600, 速率: 0.01, 当前权重: [1077.6679768992058], 当前偏值项: 88.63135974555753
+更新权重数据: [988.8699629040694] 更新bias: 77.53160799616549
+更新权重前, 输入向量: [1.4], 输出结果: 1461.9495560618627, 实际标签: 1800, 速率: 0.01, 当前权重: [988.8699629040694], 当前偏值项: 77.53160799616549
+更新权重数据: [993.6026691192034] 更新bias: 80.91211243554686
+更新权重前, 输入向量: [10.1], 输出结果: 10116.2990705395, 实际标签: 11400, 速率: 0.01, 当前权重: [993.6026691192034], 当前偏值项: 80.91211243554686
+更新权重数据: [1123.2564629947137] 更新bias: 93.74912173015186
+当前训练轮次: 9, 权重值: [1123.2564629947137], 偏置项: 93.74912173015186, 输入向量: [[5], [3], [8], [1.4], [10.1]]
+更新权重前, 输入向量: [5], 输出结果: 5710.031436703721, 实际标签: 5500, 速率: 0.01, 当前权重: [1123.2564629947137], 当前偏值项: 93.74912173015186
+更新权重数据: [1112.7548911595277] 更新bias: 91.64880736311464
+更新权重前, 输入向量: [3], 输出结果: 3429.9134808416975, 实际标签: 2300, 速率: 0.01, 当前权重: [1112.7548911595277], 当前偏值项: 91.64880736311464
+更新权重数据: [1078.8574867342768] 更新bias: 80.34967255469766
+更新权重前, 输入向量: [8], 输出结果: 8711.209566428912, 实际标签: 7600, 速率: 0.01, 当前权重: [1078.8574867342768], 当前偏值项: 80.34967255469766
+更新权重数据: [989.9607214199639] 更新bias: 69.23757689040855
+更新权重前, 输入向量: [1.4], 输出结果: 1455.1825868783578, 实际标签: 1800, 速率: 0.01, 当前权重: [989.9607214199639], 当前偏值项: 69.23757689040855
+更新权重数据: [994.7881652036668] 更新bias: 72.68575102162497
+更新权重前, 输入向量: [10.1], 输出结果: 10120.04621957866, 实际标签: 11400, 速率: 0.01, 当前权重: [994.7881652036668], 当前偏值项: 72.68575102162497
+更新权重数据: [1124.0634970262222] 更新bias: 85.48528882583837
+weights :[1124.0634970262222]
+bias    :85.48528882583837
+
+Work 3.4 years, monthly salary = 3907.30
+Work 15 years, monthly salary = 16946.44
+Work 1.5 years, monthly salary = 1771.58
+Work 6.3 years, monthly salary = 7167.09
+```
+
+
 
 拟合的直线如下图
 
