--- a/doc/lstm_network_with_python/02.md
+++ b/doc/lstm_network_with_python/02.md
@@ -26,7 +26,7 @@
 
 递归神经网络的一个简单概念是作为一种神经网络，它从先前的时间步中获取输入。 我们可以用一个图表来证明这一点。
 
-![lstm-02-01][lstm-02-01]
+![lstm-02-01][]
 
 RNNs 是适合的，并在许多时间步长的预测。随着时间步长的增加，具有循环连接的简单图开始失去所有意义。我们可以通过在输入序列上展开或展开 RNN 图来简化模型。
 
@@ -34,7 +34,7 @@ RNNs 是适合的，并在许多时间步长的预测。随着时间步长的增
 
 考虑这样一种情况，我们有多个输入`(X(t)， X(t+1)，…)`的时间步长，多个内部状态`(u(t)， u(t+1)，…)`的时间步长，以及多个输出`(y(t)， y(t+1)，…)`的时间步长。我们可以将网络示意图展开成一个没有任何循环的图，如下图所示。
 
-![lstm-02-02][lstm-02-02]
+![lstm-02-02][]
 
 可以看到，我们移动的循环和上一个时间步骤的输出(y(t))和内部状态(u(t))作为处理下一个时间步骤的输入被传递到网络。这个概念的关键是网络(RNN)在展开的时间步之间不发生变化。具体来说，每个时间步使用相同的权值，只有输出和内部状态不同。通过这种方式，整个网络(拓扑结构和权值)在输入序列中的每个时间步都被复制。
 
@@ -42,9 +42,9 @@ RNNs 是适合的，并在许多时间步长的预测。随着时间步长的增
 
 ![lstm-02-03][lstm-02-03]
 
-> RNNs 沿着时间维度展开，就可以被看作是所有层具有相同权值的深度前馈网络。
+> _RNNs 沿着时间维度展开，就可以被看作是所有层具有相同权值的深度前馈网络。_
 >
-> — Deep learning, Nature, 2015.
+> _— Deep learning, Nature, 2015._
 
 这是一个有用的概念工具和可视化工具，有助于理解在转发过程中网络中发生的事情。这可能是也可能不是深度学习库实现网络的方式。
 
@@ -52,8 +52,10 @@ RNNs 是适合的，并在许多时间步长的预测。随着时间步长的增
 
 网络展开的思想在递归神经网络实现后向遍历的过程中起着越来越重要的作用。
 
-> _与[时间反向传播]的标准一样，网络是随时间展开的，因此到达各层的连接被视为来自前一个时间步长。
-> — Framewise phoneme classification with bidirectional LSTM and other neural network architectures, 2005._
+> _与[时间反向传播]的标准一样，网络是随时间展开的，因此到达各层的连接被视为来自前一个时间步长。_
+>
+>
+> _— Framewise phoneme classification with bidirectional LSTM and other neural network architectures, 2005._
 
 **重要的是，给定时间步的误差反向传播取决于网络在前一时间步的激活。这样，反向传递需要展开网络的概念化。误差被传播回序列的第一个输入时间步，以便计算误差梯度并更新网络的权值。**
 
